# INFO0901_GenerativeAI

./: README.md  hello.py  pyproject.toml
src/: mini_projet_1.py  mini_projet_1_no_transformer.py  mini_projet_1_transformer.py
